--- a/package.json
+++ b/package.json
@@ -7,5 +7,15 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "@types/node": "^17.0.10",
+    "@typescript-eslint/eslint-plugin": "^5.10.0",
+    "@typescript-eslint/parser": "^5.10.0",
+    "esbuild": "^0.14.13",
+    "esbuild-jest": "^0.5.0",
+    "eslint": "^8.7.0",
+    "fastify": "^3.27.0",
+    "fastify-plugin": "^3.0.0"
+  }
 }
