--- a/package.json
+++ b/package.json
@@ -15,7 +15,11 @@
     "esbuild": "^0.14.13",
     "esbuild-jest": "^0.5.0",
     "eslint": "^8.7.0",
+    "eslint-plugin-jest": "^25.7.0",
     "fastify": "^3.27.0",
     "fastify-plugin": "^3.0.0"
+  },
+  "dependencies": {
+    "@types/jest": "^27.4.0"
   }
 }
