--- a/package.json
+++ b/package.json
@@ -4,22 +4,21 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "tap src/test/FastifyEnvironmentVars.test.ts --ts"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@types/node": "^17.0.10",
+    "@types/sinon": "^10.0.8",
+    "@types/tap": "^15.0.5",
     "@typescript-eslint/eslint-plugin": "^5.10.0",
     "@typescript-eslint/parser": "^5.10.0",
-    "esbuild": "^0.14.13",
-    "esbuild-jest": "^0.5.0",
     "eslint": "^8.7.0",
-    "eslint-plugin-jest": "^25.7.0",
     "fastify": "^3.27.0",
-    "fastify-plugin": "^3.0.0"
-  },
-  "dependencies": {
-    "@types/jest": "^27.4.0"
+    "fastify-plugin": "^3.0.0",
+    "sinon": "^12.0.1",
+    "tap": "^15.1.6",
+    "ts-node": "^10.4.0"
   }
 }
