--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@burlzad/fastify-environment-vars",
+  "name": "fastify-environment-vars",
   "version": "0.1.0",
   "description": "",
   "main": "dist/index.js",
@@ -14,7 +14,7 @@
     "test:integration:happy": "SOME_ENV_VARIABLE=true ts-node src/test/integration/test.ts",
     "test:integration:unhappy": "ts-node src/test/integration/test.ts",
     "lint": "eslint ./",
-    "prepublish": "npm run lint && npm t && tsc"
+    "prepublishOnly": "npm run lint && npm t && tsc"
   },
   "author": "Alex Burley",
   "license": "ISC",
